[tool.poetry]
name = "jmt-profile"
version = "0.1.0"
description = "A tool to generate elevation profiles from GPX files"
authors = ["Jan Rous <rousik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpxpy = "^1.6.0"
matplotlib = "^3.8.0"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
